@@ -42,13 +42,13 @@ be sure to first set `PYTHON_CONFIGURE_OPTS="--enabled-shared"`.
 ### Build
 
 ```shell
-./gradlew server-jetty:build
+./gradlew server-jetty-app:build
 ```
 
 produces
 
-* `server/netty/build/distributions/server-jetty-<version>.tar`
-* `server/netty/build/distributions/server-jetty-<version>.zip`
+* `server/jetty-app/build/distributions/server-jetty-<version>.tar`
+* `server/jetty-app/build/distributions/server-jetty-<version>.zip`
 
 ### Run
 
@@ -61,17 +61,23 @@ The above artifacts can be uncompressed and their `bin/start` script can be exec
 Alternatively, the uncompressed installation can be built directly by gradle:
 
 ```shell
-./gradlew server-jetty:installDist
+./gradlew server-jetty-app:installDist
 ```
 
 And then run via:
 
 ```shell
-JAVA_OPTS="-Ddeephaven.console.type=groovy" ./server/jetty/build/install/server-jetty/bin/start
+JAVA_OPTS="-Ddeephaven.console.type=groovy" ./server/jetty-app/build/install/server-jetty/bin/start
 ```
 
 Finally, Gradle can be used to update the build and run the application in a single step:
 
 ```shell
-./gradlew :server-jetty:run -Pgroovy
+./gradlew server-jetty-app:run -Pgroovy
 ```
+
+### Internals
+
+`server-jetty-app` is configured by default to include code that depends on JVM internals via
+`--add-opens java.management/sun.management=ALL-UNNAMED`. To disable this, set the gradle property `includeHotspotImpl`
+to `false`.
